finished final bugs/stuff on the website

--- a/index.html
+++ b/index.html
@@ -5,47 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Terminal Portfolio by Sat Naing</title>
-    <meta name="title" content="Terminal Portfolio by Sat Naing" />
+    <title>Ryder's Shell Portfolio</title>
+    <meta name="title" content="Shell Portfolio by Ryder Mitchell" />
     <meta
       name="description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="Ryder Mitchell's Shell Portfolio. Website made using ReactJS. Ryder is a full-stack developer from California."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://terminal.satnaing.dev/" />
-    <meta property="og:title" content="Terminal Portfolio by Sat Naing" />
+    <meta property="og:url" content="https://ryderis.online/" />
+    <meta property="og:title" content="Shell Portfolio by Ryder Mitchell" />
     <meta
       property="og:description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="Ryder Mitchell's Shell Portfolio. Website made using ReactJS. Ryder is a full-stack developer from California."
     />
     <meta
       property="og:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
+      content="https://ryderis.online/web-app-manifest-512x512.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://terminal.satnaing.dev/" />
-    <meta property="twitter:title" content="Terminal Portfolio by Sat Naing" />
+    <meta property="twitter:url" content="https://ryderis.online/" />
+    <meta property="twitter:title" content="Shell Portfolio by Ryder Mitchell" />
     <meta
       property="twitter:description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="Ryder Mitchell's Shell Portfolio. Website made using ReactJS. Ryder is a full-stack developer from California."
     />
     <meta
       property="twitter:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
-    />
+      content="https://ryderis.online/web-app-manifest-512x512.png"    
+      />
 
     <!-- Favicons and assets -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <meta name="apple-mobile-web-app-title" content="Ryder Mitchell" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1d2a35" />
-    <meta name="msapplication-TileColor" content="#1d2a35" />
-    <meta name="theme-color" content="#1d2a35" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
